tests/negative/type_return_string_from_int_fn.uzpp
// XATOLIK_KUTILMOQDA: cpp_level: butun qaytaradigan funksiya matn qaytaradi
ulash "uzpp_runtime.hpp"
butun raqam() {
    qaytarish "salom";
}
butun asosiy() {
    yozish << raqam() << qator_oxiri;
    qaytarish 0;
}
